test/compiler_errors/redfine-builtin.lzx

<canvas layout="spacing:10">
   <class name="text"/>

   <edittext>
       <handler name="onkeyup">
           Debug.write('keyup');
       </handler>
   </edittext>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2008 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
